Add support for plugin by classpath

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,12 +45,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jmri.jar=lib/jmri.jar
+file.reference.org-openide-util-lookup-RELEASE82.jar=lib/org-openide-util-lookup-RELEASE82.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.jmri.jar}
+    ${file.reference.jmri.jar}:\
+    ${file.reference.org-openide-util-lookup-RELEASE82.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
