--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=JMRI_NewLogixPlugins
+application.title=JMRI_LogixNG_Plugins
 application.vendor=
 auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.expand-tabs=true
 auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.indent-shift-width=4
@@ -40,7 +40,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/JMRI_NewLogixPlugins.jar
+dist.jar=${dist.dir}/JMRI_LogixNG_Plugins.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
